# meson options for open-isns

# enabled security and service location protocol usage by default
option('security', type: 'feature', value: 'auto',
  description: 'enable security using libcrypt')
option('slp', type: 'feature', value: 'auto',
  description: 'enable use of Service Location Protocol')

# use libisns.vers for versioning, when building shared library
option('shared_version', type: 'boolean', value: true,
  description: 'use library versioning on the shared library')

# set default locations for systemd and runtime files
option('systemddir', type: 'string', value: '/usr/lib/systemd',
  description: 'override systemd directory "/usr/lib/systemd"')
option('rundir', type: 'string', value: '/var/run',
  description: 'override runtime directory "/var/run"')
